fix : call subactivity #1
onCreate시 실행인자 변경

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sub Activity : "
+                android:text="@string/sub_activity"
                 android:textSize="20dp"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:singleLine="true"
                 android:id="@+id/textview"/>
     </LinearLayout>
+    <Button
+            android:text="Button"
+            android:layout_width="226dp"
+            android:layout_height="165dp" tools:layout_editor_absoluteY="172dp"
+            tools:layout_editor_absoluteX="91dp" android:id="@+id/button" tools:ignore="MissingConstraints"/>
 </android.support.constraint.ConstraintLayout>
