--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
-
+                                             android:layout_height="match_parent"
+                                             android:id="@+id/root_layout">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
+                  android:id="@+id/fragment_container"
+                  android:layout_weight="1"
+                  android:orientation="vertical"/>
 </android.support.constraint.ConstraintLayout>
