--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:id="@+id/root_layout">
+                                             android:id="@+id/root_layout"
+                                             android:orientation="vertical">
 
-    <FrameLayout android:layout_width="match_parent"
-                 android:layout_height="0dp"
-                 android:id="@+id/topmenu_container">
-    </FrameLayout>
-    <fragment android:name="test.hong8yung.com.candle.TopMenuFragment"
+    <fragment
+            android:name="test.hong8yung.com.candle.TopMenuFragment"
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:id="@+id/top_menu"/>
-    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
-                  android:id="@+id/fragment_container"
-                  android:layout_weight="1"
-                  android:orientation="vertical" android:gravity="bottom|end"/>
-    <fragment android:layout_width="match_parent" android:layout_height="wrap_content"
-              android:name="test.hong8yung.com.candle.PlayerFragment"
-              />
+            android:id="@+id/top_menu"
+            app:layout_constraintEnd_toStartOf="@+id/player_view"
+            android:layout_weight="1"/>
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_weight="8"></FrameLayout>
+    <fragment
+            android:name="test.hong8yung.com.candle.PlayerFragment"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:id="@+id/player_view"
+            android:layout_weight="1"
+    app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
