--- a/app/src/main/res/layout/fragment_topmenu.xml
+++ b/app/src/main/res/layout/fragment_topmenu.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent">
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal">
-        <ImageButton android:layout_width="0dp"
-                     android:layout_height="match_parent"
-                     tools:ignore="Suspicious0dp"
-                     android:layout_weight="1"
-                     android:text="First"/>
-        <ImageButton android:layout_width="0dp"
-                     android:layout_height="match_parent"
-                     tools:ignore="Suspicious0dp"
-                     android:layout_weight="1"
-                     android:text="Second"/>
-        <ImageButton android:layout_width="0dp"
-                     android:layout_height="match_parent"
-                     tools:ignore="Suspicious0dp"
-                     android:layout_weight="1"
-                     android:text="Third"/>
-    </LinearLayout>
+    <androidx.viewpager.widet.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent" android:layout_height="match_parent"/>
+        <com.google.android.material.tabs.TabLaoyt
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
 </android.support.constraint.ConstraintLayout>
