--- a/app/src/main/res/layout/fragment_topmenu.xml
+++ b/app/src/main/res/layout/fragment_topmenu.xml
@@ -3,11 +3,11 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
-    <androidx.viewpager.widet.ViewPager
+    <android.support.v4.view.ViewPager
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/pager"
             android:layout_width="match_parent" android:layout_height="match_parent"/>
-        <com.google.android.material.tabs.TabLaoyt
+        <android.support.design.widget.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
